--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <html>
     <body>
         <h1>Lyric Checker Help Page</h1>
+        <p>This page is currently under construction</p>
     </body>
 </html>
