First addition of extra pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
+    <title>Lyric Checker Help Page</title>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
         <h1>Lyric Checker Help Page</h1>
-        <p>This page is currently under construction</p>
+        <h1>This page is still under construction</h1>
+        <h2>Basic use</h2>
+        <p>Step 1:  Insert the song title in the "Song:" field.</p>
+        <img src="img/step1.png" alt="Step 1" title="Step 1">
+        <p>Step 2: <i>Optional, but recommended.</i>  Insert the song artist in the "Artist:" field.</p>
+        <img src="img/step2.png" alt="Step 2" title="Step 2">
+        <p>Step 3: Click on the "Search" button.</p>
+        <img src="img/step3.png" alt="Step 3" title="Step 3">
+        <p>Step 4: Once the program has found the song and lyrics, it will appear in the large text box below.</p>
+        <img src="img/step4.png" alt="Step 4" title="Step 4">
+        
+        <h2>For more help, click on the links below.</h2>
+        <h3><a href="opening.html" target="_self">How to open files</a></h3>
+        <h3><a href="saving.html" target="_self">How to save files</a></h3>
     </body>
 </html>
