Group Check Instructions

--- a/saving.html
+++ b/saving.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Lyric Checker Help Page</h1>
+        <h1><a href="index.html" target="_self">Lyric Checker Help Page</a></h1>
+        
         <h2>Saving files</h2>
         <p>Step 1:  Open the "File" menu.</p>
         <img src="save_img/step1.png" alt="Step 1" title="Step 1">
