--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Lyric Checker Help Page</h1>
+        <h1><a href="index.html" target="_self">Lyric Checker Help Page</a></h1>
         <h1>This page is still under construction</h1>
         <h2>Basic use</h2>
         <p>Step 1:  Insert the song title in the "Song:" field.</p>
@@ -20,5 +20,6 @@
         <h2>For more help, click on the links below.</h2>
         <h3><a href="opening.html" target="_self">How to open files</a></h3>
         <h3><a href="saving.html" target="_self">How to save files</a></h3>
+        <h3><a href="gc.html" target="_self">How to perform a group check</a></h3>
     </body>
 </html>
