--- a/opening.html
+++ b/opening.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Lyric Checker Help Page</h1>
+        <h1><a href="index.html" target="_self">Lyric Checker Help Page</a></h1>
         <h2>Opening files</h2>
         <p>Step 1:  Open the "File" menu.</p>
         <img src="open_img/step1.png" alt="Step 1" title="Step 1">
@@ -15,6 +15,5 @@
         <img src="open_img/step3.png" alt="Step 3" title="Step 3">
         <p>Step 4: The file will be loaded into the program.</p>
         <img src="open_img/step4.png" alt="Step 4" title="Step 4">
-        
     </body>
 </html>
