--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <title>Lyric Checker Help Page</title>
     <head>
         <link rel="stylesheet" href="style.css">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  
     </head>
     <body>
         <h1><a href="index.html" target="_self">Lyric Checker Help Page</a></h1>
-        <h1>This page is still under construction</h1>
         <h2>Basic use</h2>
         <p>Step 1:  Insert the song title in the "Song:" field.</p>
         <img src="img/step1.png" alt="Step 1" title="Step 1">
