--- a/saving.html
+++ b/saving.html
@@ -3,6 +3,8 @@
     <title>Lyric Checker Help Page</title>
     <head>
         <link rel="stylesheet" href="style.css">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  
+
     </head>
     <body>
         <h1><a href="index.html" target="_self">Lyric Checker Help Page</a></h1>
