Updated instructions for v1.1 release

--- a/index.html
+++ b/index.html
@@ -7,19 +7,24 @@
     </head>
     <body>
         <h1><a href="index.html" target="_self">Lyric Checker Help Page</a></h1>
-        <h2>Basic use</h2>
-        <p>Step 1:  Insert the song title in the "Song:" field.</p>
-        <img src="img/step1.png" alt="Step 1" title="Step 1">
-        <p>Step 2: <i>Optional, but recommended.</i>  Insert the song artist in the "Artist:" field.</p>
-        <img src="img/step2.png" alt="Step 2" title="Step 2">
-        <p>Step 3: Click on the "Search" button.</p>
-        <img src="img/step3.png" alt="Step 3" title="Step 3">
-        <p>Step 4: Once the program has found the song and lyrics, it will appear in the large text box below.</p>
-        <img src="img/step4.png" alt="Step 4" title="Step 4">
-        
-        <h2>For more help, click on the links below.</h2>
-        <h3><a href="opening.html" target="_self">How to open files</a></h3>
-        <h3><a href="saving.html" target="_self">How to save files</a></h3>
-        <h3><a href="gc.html" target="_self">How to perform a group check</a></h3>
-    </body>
+        <h2>Welcome!</h2>
+        <p>Hello!  Thank you for downloading Lyric Checker!  There are multiple different version of Lyric Checker.  We recommend that you download the latest, stable, version.  Currently, that version is "1.0".</p>
+        <p>Below you will find a table that has instructions for different versions.</p>
+        <table>
+            <thead>
+                <tr>
+                    <th colspan="2">Lyric Checker Versions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1.1</td>
+                    <td><a href = "1.1/basic.html" target="_self">Help</a></td>
+                </tr>
+                <tr>
+                    <td>1.0</td>
+                    <td><a href = "1.0/basic.html" target="_self">Help</a></td>
+                </tr>
+            </tbody>
+        </table>
 </html>
