--- a/1.1/opening.html
+++ b/1.1/opening.html
@@ -7,7 +7,7 @@
 
     </head>
     <body>
-        <h1><a href="index.html" target="_self">Lyric Checker Help Page</a></h1>
+        <h1><a href="../index.html" target="_self">Lyric Checker Help Page</a></h1>
         <h2>Opening files</h2>
         <p>Step 1:  Open the "File" menu.</p>
         <img src="open_img/step1.png" alt="Step 1" title="Step 1">
